# backend/routes/projects.js
@@ -14,6 +14,12 @@ router.get("/", verifyToken, (req, res) => {
         .catch(err => { res.status(500).send({ message: err.message }) })
 });
 
+router.get("/page/:pageNum/:numOfItems", verifyToken, (req, res) => {
+    schema.find().limit(req.params.numOfItems).skip(req.params.numOfItems * (req.params.pageNum - 1))
+        .then(data => { res.send(data); })
+        .catch(err => { res.status(500).send({ message: err.message }) })
+});
+
 // Get project by user id
 router.get("/user/:userId", verifyToken, (req, res) => {
     schema.find({ assigned: req.params.userId })
